k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: somos-r-prod
  labels:
    app: somos-r
    env: production
